--- a/languages/ar.json
+++ b/languages/ar.json
@@ -1,18 +1,18 @@
 {
   "1": "*********** introduction ***********",
-  "start": "أبدأ",
+  "start": "ابدأ",
 
 
   "2": "*********** Registartion ***********",
   "skip": "تجاهل",
-  "sign_in": "تسجل الدخول",
+  "sign_in": "تسجيل الدخول",
   "register": "تسجيل",
-  "email_address": "البريد الألكتروني",
+  "email_address": "البريد الإلكتروني",
   "password": "كلمة المرور",
-  "email_is_required": "البريد الألكتروني مطلوب",
+  "email_is_required": "البريد الإلكتروني مطلوب",
   "must_be_at_least_6_character": "يجب أن يكون 6 أحراف عل الأقل",
   "forget_your_password": "هل نسيت كلمة المرور؟",
-  "or_join_with": "أو أنضم بواسطة",
+  "or_join_with": "أو إنضم بواسطة",
   "i_agree_to_the": "أنا موافق على",
   "privacy_&_cookie_policy": "سياسة الخصوصية وملفات تعريف الارتباط",
   "by_registering": "بالتسجيل ، فإنك توافق على تلقي العروض الحصرية وآخر الأخبار عبر البريد الإلكتروني. إذا كنت ترغب في عدم تلقي أي بريد إلكتروني بعد الآن ، فيرجى التحقق من خيار إلغاء الاشتراك",
@@ -25,7 +25,7 @@
 
 
   "4": "*********** Home ***********",
-  "search": "البحث",
+  "search": "ابحث",
   "deal_of_the_day": "صفقة اليوم",
   "view_more": "عرض المزيد",
   "flash_sale": "بيع مفاجئ",
@@ -34,17 +34,17 @@
   "categories": "الفئات",
   "new": "جديد",
   "wishlist": "المفضلة",
-  "settings": "الأعدادات",
+  "settings": "الإعدادات",
 
 
   "5": "*********** Cart ***********",
   "shopping_bag": "سلة المشتريات",
-  "totals": "المجموع الأجمالي",
+  "totals": "المجموع الإجمالي",
   "sub_total": "المجموع الجزئي",
   "shipping": "الشحن",
   "enter_voucher_code": "أدخل رمز القسيمة",
   "apply": "تفعيل",
-  "please_enter_the_code": "الرجاء أدخال الرمز",
+  "please_enter_the_code": "الرجاء إدخال الرمز",
   "checkout": "الدفع",
   "cheaper_than_added": "أرخص من المضافة",
 
@@ -73,7 +73,7 @@
   "address_2": "العنوان 2*",
   "address_20": "العنوان 2",
   "address2_is_required": "العنوان 2 مطلوب",
-  "make_default": "تعيين كأفتراضي",
+  "make_default": "تعيين كإفتراضي",
   "save": "حفظ",
   "order_confirmed": "تم تأكيد الطلب",
 
@@ -138,11 +138,11 @@
   "firstname2": "الاسم الأول",
   "lastname1": "الاسم الأخير",
   "lastname2": "الاسم الأخير",
-  "email": "البريد الألكتروني",
-  "email1": "البريد الألكتروني",
+  "email": "البريد الإلكتروني",
+  "email1": "البريد الإلكتروني",
   "my_address": "عنواني",
   "it_is_empty": "إنه فارغ هنا",
-  "add_a_shipping_address": "عنوان الشحن",
+  "add_a_shipping_address": "أضف عنوان شحن",
   "old_password": "كلمة المرور القديمة",
   "new_password": "كلمة المرور الجديدة",
   "confirm_password": "تأكيد كلمة المرور",
@@ -166,12 +166,12 @@
   "resend_succ": "تم إعادة إرسال الرمز بنجاح",
   "resend_pass_succ":"تم إرسال كلمة المرور إلى البريد الإلكتروني بنجاح",
   "fail_search": "لا توجد عناصر لهذا البحث",
-  "wrong": "عفواً شيء ما حدث بشكل خاطئ",
+  "wrong": "عذراً شيء ما حدث بشكل خاطئ",
   "wrong_signup_msg": "هذا البريد استخدم من قبل",
   "code_required": "الرمز مطلوب",
   "code": "الرمز",
   "verificatio_code": "رمز التحقق",
-  "first_name_required": "الإسم الأول مطلوب",
+  "first_name_required": "الاسم الأول مطلوب",
   "last_name_required": "الاسم الأخير مطلوب",
   "address_saved": "تم حفظ العنوان بنجاح",
   "add_yours": "أضف خاصتك",
@@ -180,7 +180,7 @@
   "succ_code": "تم تفعيل الكود بنجاح",
   "coupon": "قسيمة",
   "discount": "حسم",
-  "oops": "عفواً",
+  "oops": "عذراً",
   "no_internet": "لا يوجد اتصال بالإنترنت يرجى المحاولة لاحقًا",
   "reload": "إعادة تحميل",
   "conf_eq_pass": "كلمة المرور ليست مثل تأكيد كلمة المرور",
@@ -200,5 +200,8 @@
   "about_us_content": "<div class = \"fs-body-base footer__text\"> <p> مجموعات ZYO (Zero Year Old) هي علامة تجارية لبيع الأزياء والجمال بالتجزئة مقرها دبي في الإمارات العربية المتحدة وتؤمن بأن \"الموضة ليس لها عمر\" ، فأنت ترتدي ما تشعر به بغض النظر عن العمر. </ p> <p> إنه شغفنا للسماح لكم بالتعبير عن أنفسكم ، وأن تحبوا أنفسكم من خلال الموضة مع أفضل العناصر ، والتفرد وخدمة العملاء الفعالة. </ p> <p> غالبية منتجاتنا < br> صنع في تركيا بجودة عالية وبأسعار مناسبة. نأمل أن تستمتع بمنتجاتنا بقدر ما نتمتع بتقديمها لك. & nbsp؛ من فضلك لا تتردد في الاتصال بنا ومشاركة ملاحظاتك أو اقتراحاتك أو استفساراتك للمساعدة في عائلة ZYO المتنامية. </ p> </div>",
   "out_of_stock": "إنتهى من المخزن",
   "tax_shipping": "الضرائب والشحن تحسب عند الدفع.",
-  "no_wishlist": "قائمة الرغبات الخاصة بك فارغة بدء التجميع"
+  "no_wishlist": "قائمة الرغبات الخاصة بك فارغة، ابدأ التجميع",
+  "pick_up": "الأستلام من زيو",
+  "pick_up_content": "تواصل مع 00971568288092 بعد إتمام الطلب",
+  "billing_address": "عنوان الدفع"
 }
