--- a/languages/hi.json
+++ b/languages/hi.json
@@ -200,5 +200,8 @@
   "about_us_content": "<div class=\"fs-body-base footer__text\"><p>ZYO Collections (Zero Year Old) दुबई-यूएई आधारित फैशन और ब्यूटी रिटेलर ब्रांड है जो मानता है कि फैशन की कोई उम्र नहीं होती, आप वही पहनते हैं जो आप उम्र की परवाह किए बिना महसूस करें।</p><p>यह हमारा जुनून है कि आप खुद को अभिव्यक्त करें, फैशन के माध्यम से अपने आप को सबसे अच्छी वस्तुओं, विशिष्टता और प्रभावी कॉस्ट्यूमर सेवा के साथ प्यार करें।</p><p>हमारे अधिकांश उत्पाद हैं<br>तुर्की में उच्च गुणवत्ता के साथ अभी तक उचित कीमतों पर निर्मित। हम आशा करते हैं कि आप हमारे उत्पादों का उतना ही आनंद लेंगे, जितना हमें उन्हें आपको देने में मज़ा आता है.&nbsp; कृपया हमसे संपर्क करने में संकोच न करें और बढ़ते ZYO परिवार में मदद करने के लिए अपनी प्रतिक्रिया, सुझाव या पूछताछ साझा करें।</p></div>",
   "out_of_stock": "स्टॉक ख़त्म",
   "tax_shipping": "चेकआउट के समय परिकलित कर और शिपिंग।",
-  "no_wishlist": "आपकी इच्छा सूची खाली है संग्रह करना शुरू करें"
+  "no_wishlist": "आपकी इच्छा सूची खाली है संग्रह करना शुरू करें",
+  "pick_up": "पिक अप",
+  "pick_up_content": "  पूर्ण आदेश के बाद +971 56 828 8092 पर संपर्क करें",
+  "billing_address": "बिल भेजने का पता"
 }
