--- a/languages/ru.json
+++ b/languages/ru.json
@@ -200,5 +200,8 @@
     "about_us_content": "<div class=\"fs-body-base footer__text\"><p>ZYO Collections (Zero Year Old) – это бренд розничной торговли модной и косметической одеждой из Дубая, ОАЭ, который считает, что у моды нет возраста, вы носите то, что вам нравится. чувствуйте себя независимо от возраста.</p><p>Мы стремимся дать вам возможность выразить себя, полюбить себя через моду с самыми лучшими вещами, уникальностью и эффективным обслуживанием клиентов.</p><p>Большинство наших продуктов <br>изготовлены в Турции с высоким качеством и разумными ценами. Мы надеемся, что вам понравится наша продукция так же, как нам нравится предлагать ее вам.&nbsp; Пожалуйста, не стесняйтесь обращаться к нам и делиться своими отзывами, предложениями или запросами, чтобы помочь растущей семье ZYO.</p></div>",
     "out_of_stock": "Нет на складе",
     "tax_shipping": "Налоги и стоимость доставки рассчитываются при оформлении заказа.",
-    "no_wishlist": "Ваш список желаний пуст начать собирать"
+    "no_wishlist": "Ваш список желаний пуст начать собирать",
+    "pick_up": "подобрать",
+    "pick_up_content": "свяжитесь с +971 56 828 8092 после полного заказа",
+    "billing_address": "Адрес для выставления счета"
   }
