--- a/languages/en.json
+++ b/languages/en.json
@@ -1,42 +1,34 @@
 {
   "1": "*********** introduction ***********",
   "start": "Start",
-
-
-  "2": "*********** Registartion ***********",
+  "2": "*********** Registration ***********",
   "skip": "Skip",
   "sign_in": "SIGN IN",
   "register": "REGISTER",
   "email_address": "Email Address",
   "password": "Password",
-  "email_is_required": "email is required",
-  "must_be_at_least_6_character": "must be at least 6 character",
-  "forget_your_password": "Forget your password?",
+  "email_is_required": "Email is required",
+  "must_be_at_least_6_character": "must be at least 6 characters",
+  "forget_your_password": "Forgot your password?",
   "or_join_with": "Or join with",
   "i_agree_to_the": "I agree to the",
   "privacy_&_cookie_policy": "Privacy & Cookie Policy",
   "by_registering": "By registering, you agree to receive exclusive offers and latest news by email. if you wish to no longer receive any email, please check the unsubscribe option",
   "by_joining": "By joining, you agree to our Privacy & Cookie Policy",
-
-
-  "3": "*********** Forget Password ***********",
-  "forget_password": "Forget Password",
+  "3": "*********** Forgot Password ***********",
+  "forget_password": "Forgot Password",
   "submit": "Submit",
-
-
   "4": "*********** Home ***********",
   "search": "Search",
   "deal_of_the_day": "Deal Of The Day",
   "view_more": "View More",
   "flash_sale": "Flash Sale",
-  "pre_order": "Pre Order",
+  "pre_order": "Pre-Order",
   "home": "Home",
   "categories": "Categories",
   "new": "New",
   "wishlist": "WishList",
   "settings": "Settings",
-
-
   "5": "*********** Cart ***********",
   "shopping_bag": "Shopping Bag",
   "totals": "Totals",
@@ -44,11 +36,9 @@
   "shipping": "Shipping",
   "enter_voucher_code": "Enter Voucher Code",
   "apply": "APPLY",
-  "please_enter_the_code": "please enter the code",
+  "please_enter_the_code": "Please enter the code",
   "checkout": "CHECKOUT",
   "cheaper_than_added": "Cheaper than added",
-
-
   "6": "*********** Checkout ***********",
   "shopping_address": "Shipping Address",
   "country_region": "*Country/Region",
@@ -76,8 +66,6 @@
   "make_default": "Make Default",
   "save": "Save",
   "order_confirmed": "ORDER CONFIRMED",
-
-
   "7": "*********** Product ***********",
   "goods": "Goods",
   "reviews": "Reviews",
@@ -109,20 +97,12 @@
   "bust": "Bust:",
   "waist": "Waist:",
   "hips": "Hips:",
-
-
   "8": "*********** Categories ***********",
   "picks_for_you": "PICKS FOR YOU",
-
-
   "9": "*********** New Collection ***********",
   "new_collection": "NEW COLLECTION",
-
-
   "10": "*********** Wishlist ***********",
   "wish_list": "Wish List",
-
-
   "11": "*********** Settings ***********",
   "personal_information": "Personal Information",
   "address_book": "Address Book",
@@ -130,7 +110,7 @@
   "delete_account": "Delete Account",
   "country/region": "Country/Region",
   "languages": "Language",
-  "connect_to_us": "Connect to Us",
+  "connect_to_us": "Contact Us",
   "about_zyo": "About ZYO",
   "sign_out": "SIGN OUT",
   "version": "Version",
@@ -146,7 +126,7 @@
   "old_password": "Old Password",
   "new_password": "New Password",
   "confirm_password": "Confirm Password",
-  "do_you_really_want_to_delete_your_account": "Do You Really Want To Delete Your Account",
+  "do_you_really_want_to_delete_your_account": "Do You Really Want To Delete Your Account?",
   "no": "No",
   "yes": "Yes",
   "english": "English",
@@ -155,17 +135,17 @@
   "instagram": "Instagram",
   "twitter": "Twitter",
   "currency": "Currency",
-  "comming_soon": "COMMING SOON",
+  "comming_soon": "COMING SOON",
   "our_products": "Our Products",
   "wishlist_msg": "Product added to wishlist successfully",
   "please_type": "Please type what you need",
   "login_succ": "Login has been Successfully",
   "wrong_mail": "Wrong Email or Password",
   "mail_verificated": "Account has been certificated successfully",
-  "sign_up_succ": "Sign up has been Successfully",
-  "resend_succ": "Resend code has been Successfully",
-  "resend_pass_succ":"Password send to Email Successfully",
-  "fail_search": "No elements for this search",
+  "sign_up_succ": "Signed up successfully",
+  "resend_succ": "Resent code successfully",
+  "resend_pass_succ":"Password sent to Email successfully",
+  "fail_search": "No elements found",
   "wrong": "Oops something went wrong",
   "wrong_signup_msg": "This email is already in use",
   "code_required": "Code is required",
@@ -173,19 +153,19 @@
   "verificatio_code": "Verification Code",
   "first_name_required": "First name is required",
   "last_name_required": "Last name is required",
-  "address_saved": "Address saved Successfully",
+  "address_saved": "Address saved successfully",
   "add_yours": "Add yours",
   "post": "post",
-  "error_code": "The code not true please try again later",
-  "succ_code": "Code Activated Successfully",
+  "error_code": "The code is incorrect; please try again later",
+  "succ_code": "Code is Activated successfully",
   "coupon": "Coupon",
   "discount": "Discount",
   "oops": "Oops",
-  "no_internet": "No internet access please try later",
+  "no_internet": "No internet access please try again later",
   "reload": "Reload",
-  "conf_eq_pass": "Password not same confirm password",
-  "small_pass": "Password must be 6 characters at least",
-  "pass": "password is changed successfully.",
+  "conf_eq_pass": "Passwords don't match",
+  "small_pass": "Password must be at least 6 characters",
+  "pass": "Password is changed successfully",
   "AED": "AED",
   "Dollar": "$",
   "USD": "USD",
@@ -195,10 +175,13 @@
   "shop_by_age": "SHOP BY AGE",
   "shop_by_unisex": "SHOP BY UNISEX",
   "check_mail": "Please check your email",
-  "no_content": "This content have no elements",
-  "return_policy_content": "<div class=\"page__rte ff-body rte rte--page\">\n    <p><strong>ORDERS</strong></p>\n<meta charset=\"utf-8\">\n<p>Order may be placed on&nbsp;<a href=\"https://narayajewelry.com/pages/www.narayajewelry.om\"><strong>www.zyocollections.com</strong>&nbsp;</a>at any time. Upon order completion you will received an email with tracking information. If you do not receive shipping confirmation please contact us at&nbsp;<a href=\"mailto:narayajewelry@gmail.com\">info@zyocollections.com </a><a href=\"mailto:narayajewelry@gmail.com\">&nbsp;</a><br> &nbsp;<br> Orders placed during holiday seasons can take longer due to high volume of orders. If you have a special request regarding availability, sizing and more please don’t hesitate to contact us at&nbsp;<a href=\"mailto:narayajewelry@gmail.com\">info@zyocollections.com </a><a href=\"mailto:narayajewelry@gmail.com\">&nbsp;</a>&nbsp;or&nbsp;<strong>00971505040318</strong></p>\n<h2><strong>RETURNS AND REFUNDS:</strong></h2>\n<p>At&nbsp;ZYO collections we are dedicated to&nbsp;provide the most positive shopping experience for all of our customers.&nbsp;ZYO collections pieces are eligible for exchange after 7 days of purchase. We can exchange items not less than the amount purchased.&nbsp;we do not accept returns or refunds.</p>\n<p>For more information contact us through&nbsp;info@zyocollections.com <strong>or009 71505040318</strong></p>\n<p>&nbsp;</p>\n<p><strong>RETURNS AND REFUNDS:</strong></p>\n<p>At&nbsp;ZYO collections we are dedicated to providing the most positive shopping experience for all of our customers.&nbsp;ZYO collections pieces are eligible for exchange after 7 days of purchase. We can exchange items not less than the amount purchased.&nbsp;we do not accept returns or refunds.</p>\n<p>For more information contact us through&nbsp;info@zyocollections.com <strong>or 00971505040318</strong></p>\n<p>&nbsp;</p>\n<p>REPAIRS:</p>\n<p>At&nbsp;ZYO collections each piece of our creations are made to become yours. If you experience the need for repair or resizing on any&nbsp;ZYO &nbsp;collections pieces please contact&nbsp;<strong>info@zyocollections.com </strong><strong>&nbsp;or 00971505040318</strong></p>\n<p>Please note that the charge for delivery is 60 AED&nbsp;<br> Please provide your name address and order number and repair issue. &nbsp;<br> <strong>We accept repairs and exchange from items purchased on www.zyocollections.com only.</strong></p>\n  </div>",
+  "no_content": "This content has no elements",
+  "return_policy_content": "<div class=\"page__rte ff-body rte rte--page\">\n <p><strong>ORDERS</strong></p>\n<meta charset=\"utf-8\">\n<p>Order may be placed on&nbsp;<a href=\"https://narayajewelry.com/pages/www.narayajewelry.om\"><strong>www.zyocollections.com</strong>&nbsp;</a>at any time. Upon order completion you will received an email with tracking information. If you do not receive shipping confirmation please contact us at&nbsp;<a href=\"mailto:narayajewelry@gmail.com\">info@zyocollections.com </a><a href=\"mailto:narayajewelry@gmail.com\">&nbsp;</a><br> &nbsp;<br> Orders placed during holiday seasons can take longer due to high volume of orders. If you have a special request regarding availability, sizing and more please don’t hesitate to contact us at&nbsp;<a href=\"mailto:narayajewelry@gmail.com\">info@zyocollections.com </a><a href=\"mailto:narayajewelry@gmail.com\">&nbsp;</a>&nbsp;or&nbsp;<strong>00971505040318</strong></p>\n<h2><strong>RETURNS AND REFUNDS:</strong></h2>\n<p>At&nbsp;ZYO collections we are dedicated to&nbsp;provide the most positive shopping experience for all of our customers.&nbsp;ZYO collections pieces are eligible for exchange after 7 days of purchase. We can exchange items not less than the amount purchased.&nbsp;we do not accept returns or refunds.</p>\n<p>For more information contact us through&nbsp;info@zyocollections.com <strong>or009 71505040318</strong></p>\n<p>&nbsp;</p>\n<p><strong>RETURNS AND REFUNDS:</strong></p>\n<p>At&nbsp;ZYO collections we are dedicated to providing the most positive shopping experience for all of our customers.&nbsp;ZYO collections pieces are eligible for exchange after 7 days of purchase. We can exchange items not less than the amount purchased.&nbsp;we do not accept returns or refunds.</p>\n<p>For more information contact us through&nbsp;info@zyocollections.com <strong>or 00971505040318</strong></p>\n<p>&nbsp;</p>\n<p>REPAIRS:</p>\n<p>At&nbsp;ZYO collections each piece of our creations are made to become yours. If you experience the need for repair or resizing on any&nbsp;ZYO &nbsp;collections pieces please contact&nbsp;<strong>info@zyocollections.com </strong><strong>&nbsp;or 00971505040318</strong></p>\n<p>Please note that the charge for delivery is 60 AED&nbsp;<br> Please provide your name address and order number and repair issue. &nbsp;<br> <strong>We accept repairs and exchange from items purchased on www.zyocollections.com only.</strong></p>\n </div>",
   "about_us_content": "<div class=\"fs-body-base footer__text\"><p>ZYO Collections (Zero Year Old) is a Dubai-UAE based fashion and beauty retailer brand that believes that “Fashion has no age”, you wear what you feel like regardless of age.</p><p>It is our passion to let you express yourselves, love yourselves through fashion with the very best items, uniqueness and effective costumer service.</p><p>Majority of our products are<br>manufactured in Turkey with high quality yet at reasonable prices. We hope you enjoy our products as much as we enjoy offering them to you.&nbsp; Please do not hesitate to contact us and share your feedback, suggestions or inquiries to help in the growing ZYO family.</p></div>",
   "out_of_stock": "Out Of Stock",
-  "tax_shipping": "Taxes and shipping calculated at checkout.",
-  "no_wishlist": "Your Wishlist is empty start collecting"
+  "tax_shipping": "Taxes and shipping calculated at checkout",
+  "no_wishlist": "Your Wishlist is empty, start collecting",
+  "pick_up": "Pick Up",
+  "pick_up_content": "contact with +971 56 828 8092 after complete order",
+  "billing_address": "Billing Address"
 }
