--- a/languages/ar.json
+++ b/languages/ar.json
@@ -203,5 +203,7 @@
   "no_wishlist": "قائمة الرغبات الخاصة بك فارغة، ابدأ التجميع",
   "pick_up": "الأستلام من زيو",
   "pick_up_content": "تواصل مع 00971568288092 بعد إتمام الطلب",
-  "billing_address": "عنوان الدفع"
+  "billing_address": "عنوان الدفع",
+  "order_no": "رقم الطلب",
+  "order_accepted": "تم قبول الطلب"
 }
