--- a/languages/hi.json
+++ b/languages/hi.json
@@ -203,5 +203,8 @@
   "no_wishlist": "आपकी इच्छा सूची खाली है संग्रह करना शुरू करें",
   "pick_up": "पिक अप",
   "pick_up_content": "  पूर्ण आदेश के बाद +971 56 828 8092 पर संपर्क करें",
-  "billing_address": "बिल भेजने का पता"
+  "billing_address": "बिल भेजने का पता",
+  "order_no": "आदेश संख्या",
+  "order_accepted": "आदेश स्वीकृत"
+
 }
