--- a/languages/ru.json
+++ b/languages/ru.json
@@ -203,5 +203,7 @@
     "no_wishlist": "Ваш список желаний пуст начать собирать",
     "pick_up": "подобрать",
     "pick_up_content": "свяжитесь с +971 56 828 8092 после полного заказа",
-    "billing_address": "Адрес для выставления счета"
+    "billing_address": "Адрес для выставления счета",
+    "order_no": "№ заказа",
+    "order_accepted": "Заказ принят"
   }
